# better-rm

./: .clang-format  .cz.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  LICENCE.md  README.md  pyproject.toml
.github/workflow/: build.yaml  release.yaml
.github/workflows/: build.yaml  bump-version.yml  pre-commit.yaml  publish_docs.yml  release.yaml
config/: better-rm.conf.example
docs/: CMakeLists.txt  COMMITIZEN_SETUP.md   DEVELOPER_QUICK_REFERENCE.md  Doxyfile.in  GITHUB_WORKFLOWS.md
include/: version.h
scripts/: install.sh  setup-dev.sh  test-ci-locally.sh
src/: main.c
systemd/: better-rm-trash-cleanup.service  better-rm-trash-cleanup.timer  trash-cleanup.sh
tests/: CMakeLists.txt  README.md  test_config_parser.c  test_main.c  test_path_operations.c  test_protected_dirs.c  test_remove_operations.c  test_runner.c  test_runner_single.c  test_trash_operations.c
